--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header d-flex align-items-center justify-content-between px-3 py-2 border-bottom bg-white">
-        <img src="" alt="">
+        <img src="/images/class101_logo.png" alt="" style="width: 100px;">
         <div class="d-flex align-items-center">
             <span>관리자</span>
             <span class="mid-gray-color me-3">님 환영합니다</span>
