--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header class="header d-flex align-items-center justify-content-between px-3 py-2 border-bottom bg-white">
-        <img src="/images/class101_logo.png" alt="" style="width: 100px;">
+        <img src="/images/class101_logo.png" class="logo-img-size" alt="클래스101 로고">
         <div class="d-flex align-items-center">
             <span>관리자</span>
-            <span class="mid-gray-color me-3">님 환영합니다</span>
+            <span class="text-secondary me-3">님 환영합니다</span>
             <button class="btn btn-sm btn-outline-dark d-flex align-items-center">
                 <i class="fa-solid fa-arrow-right-from-bracket me-1"></i>
                 <span>로그아웃</span>
@@ -22,31 +22,31 @@
     <div class="d-flex">
         <nav class="sidebar bg-white border-end">
             <div class="nav flex-column">
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-chart-simple me-2"></i>
                     대시보드
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-desktop me-2"></i>
                     클래스 관리
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-credit-card me-2"></i>
                     결제 관리
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-user me-2"></i>
                     회원 관리
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-video me-2"></i>
                     콘텐츠 관리
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-rectangle-ad me-2"></i>
                     프로모션 관리
                 </a>
-                <a href="#!" class="nav-link py-3 px-4 text-dark d-flex align-items-center mid-gray-color">
+                <a href="#!" class="nav-link py-3 px-4 text-secondary d-flex align-items-center">
                     <i class="fa-solid fa-gear me-2"></i>
                     설정
                 </a>
@@ -57,7 +57,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="#!">
-                    <i class="fa-solid fa-house text-secondary" width="18" height="18"></i>
+                    <i class="fa-solid fa-house text-secondary home-icon-size"></i>
                 </a>
             </li>
             <li class="breadcrumb-item">
@@ -101,12 +101,12 @@
                 </div>
                 <table class="table mt-3">
                     <colgroup>
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 13%;">
-                        <col style="width: 20%;">
-                        <col style="width: 10%;">
-                        <col style="width: 10%;">
+                        <col class="col-width-lg">
+                        <col class="col-width-lg">
+                        <col class="col-width-md">
+                        <col class="col-width-xl">
+                        <col class="col-width-sm">
+                        <col class="col-width-sm">
                     </colgroup>
                     <thead>
                         <tr class="font-size-sm">
